--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,3 +1,3 @@
 <resources>
-    <color name="bootsplash_background">#09BF97</color>
+    <color name="bootsplash_background">#0DC39F</color>
 </resources>
